# gflip

./: .gitignore  CMakeLists.txt  package.xml
cmake/: Config.cmake.in
gflip/: CMakeLists.txt  package.xml
gflip_engine/: CMakeLists.txt  package.xml  rosdoc.yaml
gflip_engine/doc/: Makefile  conf.py  index.rst  make.bat
gflip_engine/examples/: FeatureExtractor.cpp  GFPLoopClosingTest.cpp  GenerateBoW.cpp  GenerateNN.cpp  LearnVocabularyKMeans.cpp  NNLoopClosingTest.cpp  gflip_cl.cpp  gflip_cl_onequery.cpp
gflip_engine/src/: gflip_engine.cpp
gflip_vocabulary/: CMakeLists.txt  package.xml  rosdoc.yaml
gflip_vocabulary/doc/: Makefile  conf.py  index.rst  make.bat
gflip_vocabulary/include/gflip_vocabulary/: hierarchical_kmeans_clustering.h  kmeans_clustering.h  vocabulary.h
gflip_vocabulary/src/: vocabulary.cpp
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  LearnVocabularyKMeans.cpp
src/gflip/: CMakeLists.txt  gflip_engine.cpp  gflip_engine.hpp
src/matching/: CMakeLists.txt  base_matcher.cpp  base_matcher.h  geometrical_phrases_matcher.cpp  geometrical_phrases_matcher.h  laser_scan_data.cpp  laser_scan_data.h  standard_bow_matcher.cpp  standard_bow_matcher.h
src/vocabulary/: CMakeLists.txt  KMeansClustering.hpp
